2004-11-25  Miguel de Icaza  <miguel@ximian.com>

	* class.cs (TypeContainer.GetClassBases): It is an error to have a
	non-interface in the list of interfaces (at this point, either
	parent was properly set, or a base class is being listed in the
	interfaces section).

	This flags error 1722, and resolves the crash from bug 69259.

2004-11-25  Ben Maurer  <bmaurer@ximian.com>

	* statement.cs (Using.EmitExpressionFinally): make this work right
	for valuetypes. Fixes 69926.

2004-11-25  Miguel de Icaza  <miguel@ximian.com>

	* const.cs (Const.ChangeType): Cope with the "0 literal can be
	converted to an enum" here, before we try to change the underlying
	type.  This code exists, but it is a different code path than the
	one used while encoding constants.

	* convert.cs (ImplicitReferenceConversionExists): A surprisingly
	old bug: when converting from the null literal to a pointer,
	return an EmptyCast, not the NullLiteral.

	This fixes #69921, the recent null_type changes probably made this
	bug more prominent.

	(ImplicitReferenceConversionExists): In addition, resynchronized
	the code here, so it matches the same code in
	ImplicitReferenceConversionExists for the `from any class-type S
	to any interface-type T'.
	

2004-11-25  Marek Safar  <marek.safar@seznam.cz>

	* cfold.cs (BinaryFold): Add addition for DecimalConstant.

2004-11-24  Miguel de Icaza  <miguel@ximian.com>

	* cs-parser.jay: Use verbosity accordingly. 

2004-11-24  Marek Safar  <marek.safar@seznam.cz>

	* expression.cs (Unary.ResolveOperator): Do not report warning;
	AddressOf reads from variable.
	
	(LocalVariableReferences.DoResolveBase): Improved my previous fix.

2004-11-24  Marek Safar  <marek.safar@seznam.cz>

	Fix bug #69462

	* attribute.cs (Attributable): Removed CheckTargets.
	(Attributes.Emit): Explicit attribute targets are tested here.

	* class.cs (EventField.ValidAttributeTargets): Explicit target "field" is
	not enabled for interfaces.
